# microlab

./: LICENSE  README.md  destroy.sh  docker-compose.yml  rebuild.sh  rebuild_small_changes.sh  run_microlab.sh  start.sh  test_v1.elf
interfaz/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json
interfaz/src/: App.css  App.tsx  SelectedPins.css  WebSocketComponent.tsx  board.tsx  selectedPins.tsx
interfaz/src/assets/: Fields.json  Map.json  Map2.json  alternate_function.json
interfaz/src/components/: Board.tsx  Layout.tsx  PinSearcher.tsx  TimerView.tsx  ToggleDescription.tsx  WebSocketComponent.tsx  selectedPins.tsx
interfaz/src/hooks/: useApi.ts
interfaz/src/styles/: App.css  Board.css  Layout.css  PinSearcher.css  SelectedPins.css  TimerView.css  ToggleDescription.css  Websocket.css
interfaz/src/types/: fieldTypes.ts
qtest/: Cargo.toml
qtest/src/: main.rs
qtestapp/: .dockerignore  Cargo.toml  Dockerfile
qtestapp/src/: main.rs
qtestapp/src/utils/: api_routes.rs  fields.rs  init.rs  websocket.rs
qtestapp/src/utils2/: api_routes.rs  error.rs  fields.rs  init.rs  mod.rs  websocket.rs
