[package]
name = "qtest"
version = "0.1.0"
edition = "2021"

[dependencies]
# qtest-stm32f4nucleo = { path = "../qtest/qtest-stm32f4nucleo" }
qtest-stm32f4nucleo = { git = "https://github.com/greenlsi/qtest.git", branch = "submodules" }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
qtest = { path = "../qtest", version = "0.1.0"}
warp = "0.3.7"
lazy_static = "1.5.0"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.15"
axum = { version = "0.5", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = {version ="0.3" , features = ["env-filter"]}
