[package]
name = "qtestapp"
version = "0.1.0"
edition = "2021"

[dependencies]
#qtest-stm32f4nucleo = { path = "../../qtest/qtest-stm32f4nucleo" }
#qtest = { path = "../../qtest/qtest" }
qtest-stm32f4nucleo = { git = "https://github.com/greenlsi/qtest.git", branch = "submodules" }
qtest = { git = "https://github.com/greenlsi/qtest.git", branch = "submodules" }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
warp = "0.3.7"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.15"
axum = { version = "0.5", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = {version ="0.3" , features = ["env-filter"]}
dotenv = "0.15"
url = "2.2.2"